--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h3 style="margin-bottom: 20px;"><span style="color: cornflowerblue;"> 03.</span> About Me</h3>
         <p class="about-para"> 
           My goal for the year to come is to strengthen my understanding of full-stack development in a professional environment. 
-          When I am not coding, you will find me painting in my makeshift studio or longboarding around town.
+          Outside of coding, my interests include painting in my makeshift studio and longboarding/biking around town.
         </p>
       </section>
       <footer>
