--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <h3 style="margin-bottom: 20px;"><span style="color: cornflowerblue;"> 04.</span> Contact</h3>
           <ul>
             <li> Email: angeleefshaw@gmail.com</li>
-            <li> Resume:  <a href="assets/documents/angelee-shaw-Resume(5).pdf" download="angelee-shaw-resume">Download The pdf</a></li>
+            <li> Resume:  <a href="assets/documents/AngeleeShaw- resume.pdf" download="angelee-shaw-resume">Download The pdf</a></li>
             <li> Github: <a href="https://github.com/angeleefshaw">https://github.com/angeleefshaw</a></li>
             <li> LinkedIn: <a href="https://www.linkedin.com/in/angeleeshaw/">https://www.linkedin.com/in/angeleeshaw/</a></li>
           </ul>
