Anchor hover styling
Tailwind Woohoo!

--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
           <div class="prj">
           <div class="project-media">
               <button class="button text-light">
-                <a href="https://angeleefshaw.github.io/kanban/" target="blank" style="text-decoration: none;">
+                <a href="https://angeleefshaw.github.io/kanban/" target="blank" style="text-decoration: none;"
+                  class="hover:text-white"
+                >
                   Live Site
                 </a> 
               </button>
               <button class="button text-light">
-                <a href="https://github.com/angeleefshaw/kanban" target="blank" style="text-decoration: none;">
+                <a href="https://github.com/angeleefshaw/kanban" target="blank" style="text-decoration: none;"
+                class="hover:text-white"
+                >
                   Github Repo
                 </a> 
               </button>
@@ -78,8 +82,20 @@
           </div>
           <div class="prj">
           <div class="project-media">
-              <button class="button text-light"><a href="https://angeleefshaw.github.io/Password-Generator/" target="blank" style="text-decoration: none;">Live Site</a></button>
-              <button class="button text-light"><a href="https://github.com/angeleefshaw/Password-Generator" target="blank" style="text-decoration: none;">Github Repo</a></button>
+              <button class="button text-light">
+                <a href="https://angeleefshaw.github.io/Password-Generator/" target="blank" style="text-decoration: none;"
+                class="hover:text-white"
+                >
+                  Live Site
+                </a>
+              </button>
+              <button class="button text-light">
+                <a href="https://github.com/angeleefshaw/Password-Generator" target="blank" style="text-decoration: none;"
+                class="hover:text-white"
+                >
+                  Github Repo
+                </a>
+              </button>
           </div>
           </div>
       </div>
