Project buttons increase contrast

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <section id="projects" class="mb-14">
         <h3 class="mb-6 text-4xl"><span style="color: cornflowerblue;"> 02.</span> Projects</h3>
         <div class="trippercont sm:w-2/3">
-          <div class="topics holds-buttons pt-4 text-slate-100 text-sm">
-            <a class="px-6 py-2 mr-5 bg-zinc-400 rounded">angular</a>
-            <a class="px-6 py-2 mr-5 bg-zinc-400 rounded">RxJs</a>
-            <a class="px-6 py-2 mr-5 bg-zinc-400 rounded">scss</a>
-            <a class="px-6 py-2 mr-5 bg-zinc-400 rounded">html</a>  
+          <div class="font-bold topics holds-buttons pt-4 text-white text-sm">
+            <a class="px-6 py-2 mr-5 bg-zinc-600 rounded">Angular</a>
+            <a class="px-6 py-2 mr-5 bg-zinc-600 rounded">RxJs</a>
+            <a class="px-6 py-2 mr-5 bg-zinc-600 rounded">SCSS</a>
+            <a class="px-6 py-2 mr-5 bg-zinc-600 rounded">HTML</a>  
         </div>
           <div class="proj-section">
               <h5 class="proj-title pb-3">Kanban Board</h5>
@@ -68,10 +68,10 @@
           </div>
         </div>
         <div class="trippercont sm:w-2/3">
-          <div class="topics holds-buttons pt-4 text-slate-100 text-sm">
-            <span class="px-6 py-2 mr-5 bg-zinc-400 rounded">javascript</span>
-            <span class="px-6 py-2 mr-5 bg-zinc-400 rounded">CSS</span>
-            <span class="px-6 py-2 mr-5 bg-zinc-400 rounded">html</span>
+          <div class="font-bold topics holds-buttons pt-4 text-white text-sm">
+            <span class="px-6 py-2 mr-5 bg-zinc-600 rounded">Javascript</span>
+            <span class="px-6 py-2 mr-5 bg-zinc-600 rounded">CSS</span>
+            <span class="px-6 py-2 mr-5 bg-zinc-600 rounded">HTML</span>
           </div>
           <div class="proj-section">
               <h5 class="proj-title pb-3" >Password Generator</h5>
