--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           I have also worked with many web development technologies such as <span class="font-semibold">
           Bootstrap</span>, <span class="font-semibold">TailwindCSS</span>, Piano and 
           <span class="font-semibold">Google Ad Manager</span>. I have now set my sights on 
-          software development and spend the afternoons writing algorithims while learning Java in tandem.
+          software development and spend the afternoons working with data structures and learning Java in tandem.
         </p>
         <p style="font-size:16px" class="mt-4">
           Ultimately, I love to learn and have found a place in the tech world that never fails 
