Text gets repetitive

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           About Me
         </h3>
         <p style="font-size:16px"> 
-          I am a self taught full stack developer writing code in <span class="font-semibold">Javascript 
+          I am a self taught developer writing code in <span class="font-semibold">Javascript 
           </span>and<span class="font-semibold">PHP</span>. My passion for Javascript has been refined 
           in the past two years through the use of <span class="font-semibold">NodeJs</span>, 
           <span class="font-semibold">Angular</span> and <span class="font-semibold">VueJS</span>. 
