--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
         </h3>
         <p style="font-size:16px"> 
           I am a self taught developer writing code in <span class="font-semibold">Javascript 
-          </span>and<span class="font-semibold">PHP</span>. My passion for Javascript has been refined 
+          </span>and<span class="font-semibold"> PHP</span>. My passion for Javascript has been refined 
           in the past two years through the use of <span class="font-semibold">NodeJs</span>, 
-          <span class="font-semibold">Angular</span> and <span class="font-semibold">VueJS</span>. 
+          <span class="font-semibold"> Angular</span> and <span class="font-semibold">VueJS</span>. 
           I have also worked with many web development technologies such as <span class="font-semibold">
           Bootstrap</span>, <span class="font-semibold">TailwindCSS</span>, Piano and 
           <span class="font-semibold">Google Ad Manager</span>. I have now set my sights on 
-          software development and spend the afternoons working with data structures and learning Java in tandem.
+          software development and spend the afternoons working with data structures and algorithms.
         </p>
       </section>
       <section id="contact" class="mb-14">
