--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </h3>
         <ul class="text-2xl">
           <li> Email: angeleefshaw@gmail.com</li>
-          <li> Resume:  <a href="assets/documents/angelee-shaw-resume-2024.pdf" download="angelee-shaw-resume">Download The pdf</a></li>
+          <li> Resume:  <a href="Angelee-Shaw-Resume.docx" download="angelee-shaw-resume">Download The pdf</a></li>
           <li> Github: <a href="https://github.com/angeleefshaw">https://github.com/angeleefshaw</a></li>
           <li> LinkedIn: <a href="https://www.linkedin.com/in/angeleeshaw/">https://www.linkedin.com/in/angeleeshaw/</a></li>
         </ul>
