General Updates to about me

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section id="intro" class="mb-14 sm:w-2/3">
         <h1 class="mb-10 text-5xl font-semibold">Angelee Shaw</h1>
         <p class="text-2xl">I am a full-stack developer located in Charlotte, North Carolina. 
-          I currently write code accross the stack for <a href="https://bizjournals.com">American City Business Journals</a> 
+          I currently write code across the stack for <a href="https://bizjournals.com">American City Business Journals</a> 
           using <span class="font-semibold">Javascript</span> and <span class="font-semibold">PHP</span>.
         </p>
         <div class="columns-2 mt-4">
@@ -26,106 +26,36 @@
           </div>
           <div class="flex flex-col font-bold">
               <span> <span class="arrow">&#187;</span> VueJs</span>
-              <span> <span class="arrow">&#187;</span> Node</span>
-              <span> <span class="arrow">&#187;</span> MySQL</span>
+              <span> <span class="arrow">&#187;</span> Laravel</span>
+              <span> <span class="arrow">&#187;</span> PHP</span>
           </div>
         </div>
-      </section>
-      <section id="projects" class="mb-14">
-        <h3 class="mb-6 text-4xl"><span style="color: cornflowerblue;"> 02.</span> Projects</h3>
-        <div class="trippercont sm:w-2/3">
-          <div class="font-bold topics holds-buttons pt-4 text-white text-sm">
-            <a class="px-6 py-2 mr-5 bg-zinc-600 rounded">Angular</a>
-            <a class="px-6 py-2 mr-5 bg-zinc-600 rounded">RxJs</a>
-            <a class="px-6 py-2 mr-5 bg-zinc-600 rounded">SCSS</a>
-            <a class="px-6 py-2 mr-5 bg-zinc-600 rounded">HTML</a>  
-        </div>
-          <div class="proj-section">
-              <h5 class="proj-title pb-3">Kanban Board</h5>
-              <p class="proj-desc">
-                A simple front-end Angular application built with Rxjs. 
-                This application allows users to create, update, and delete tasks. 
-                It offers the ability to move tasks across the Kanban Board.
-              </p>
-          </div> 
-          <div class="prj">
-          <div class="project-media">
-              <button class="button text-light">
-                <a href="https://angeleefshaw.github.io/kanban/" target="blank" style="text-decoration: none;"
-                  class="hover:text-white"
-                >
-                  Live Site
-                </a> 
-              </button>
-              <button class="button text-light">
-                <a href="https://github.com/angeleefshaw/kanban" target="blank" style="text-decoration: none;"
-                class="hover:text-white"
-                >
-                  Github Repo
-                </a> 
-              </button>
-          </div>
-          </div>
-        </div>
-        <div class="trippercont sm:w-2/3">
-          <div class="font-bold topics holds-buttons pt-4 text-white text-sm">
-            <span class="px-6 py-2 mr-5 bg-zinc-600 rounded">Javascript</span>
-            <span class="px-6 py-2 mr-5 bg-zinc-600 rounded">CSS</span>
-            <span class="px-6 py-2 mr-5 bg-zinc-600 rounded">HTML</span>
-          </div>
-          <div class="proj-section">
-              <h5 class="proj-title pb-3" >Password Generator</h5>
-              <p class="proj-desc">
-                This front-end application generates random passwords. Specify number of characters, 
-                letter casing, and allowment of special characters and numbers.
-              </p>
-          </div>
-          <div class="prj">
-          <div class="project-media">
-              <button class="button text-light">
-                <a href="https://angeleefshaw.github.io/Password-Generator/" target="blank" style="text-decoration: none;"
-                class="hover:text-white"
-                >
-                  Live Site
-                </a>
-              </button>
-              <button class="button text-light">
-                <a href="https://github.com/angeleefshaw/Password-Generator" target="blank" style="text-decoration: none;"
-                class="hover:text-white"
-                >
-                  Github Repo
-                </a>
-              </button>
-          </div>
-          </div>
-      </div>
       </section>
       <section id="about" class="mb-14 sm:w-2/3">
         <h3 class="text-4xl mb-6">
-          <span style="color: cornflowerblue;"> 03.</span> 
+          <span style="color: cornflowerblue;"> 02.</span> 
           About Me
         </h3>
         <p style="font-size:16px"> 
-          I am a self taught developer writing code in <span class="font-semibold">Javascript 
+          I am a self-taught developer writing code in <span class="font-semibold">Javascript 
           </span>and<span class="font-semibold"> PHP</span>. My passion for Javascript has been refined 
-          in the past two years through the use of <span class="font-semibold">NodeJs</span>, 
+          in the past four years through the use of <span class="font-semibold">NodeJs</span>, 
           <span class="font-semibold"> Angular</span> and <span class="font-semibold">VueJS</span>. 
           I have also worked with many web development technologies such as <span class="font-semibold">
-          Bootstrap</span>, <span class="font-semibold">TailwindCSS</span>, Piano and 
-          <span class="font-semibold">Google Ad Manager</span>. I have now set my sights on 
-          software development and spend the afternoons working with data structures and algorithms.
+          Bootstrap</span>, <span class="font-semibold">TailwindCSS</span>, Adobe Analytics and 
+          <span class="font-semibold">Google Ad Manager</span>. I am pursuing a bachelor of science in computer science at Simmons University while working full-time and will graduate in <span class="font-semibold">2025</span>.
         </p>
       </section>
       <section id="contact" class="mb-14">
         <h3 class="text-4xl mb-6">
-          <span style="color: cornflowerblue;"> 04.</span> 
+          <span style="color: cornflowerblue;"> 03.</span> 
           Contact
         </h3>
         <ul class="text-2xl">
-          <li> Email: angeleefshaw@gmail.com</li>
-          <li> Resume:  <a href="Angelee-Shaw-Resume.docx" download="angelee-shaw-resume">Download The pdf</a></li>
-          <li> Github: <a href="https://github.com/angeleefshaw">https://github.com/angeleefshaw</a></li>
-          <li> LinkedIn: <a href="https://www.linkedin.com/in/angeleeshaw/">https://www.linkedin.com/in/angeleeshaw/</a></li>
+          <li><span class="arrow">&#187;</span> Email: angeleefshaw@gmail.com</li>
+          <li><span class="arrow">&#187;</span> Resume:  <a href="Angelee-Shaw-Resume.docx" download="angelee-shaw-resume">Download</a></li>
+          <li><span class="arrow">&#187;</span> Github: <a href="https://github.com/angeleefshaw">https://github.com/angeleefshaw</a></li>
+          <li><span class="arrow">&#187;</span> LinkedIn: <a href="https://www.linkedin.com/in/angeleeshaw/">https://www.linkedin.com/in/angeleeshaw/</a></li>
         </ul>
       </section>
     </main>
